sql/log_event.cc
@@ -2103,7 +2103,17 @@ START SLAVE; . Query: '%s'", expected_error, thd->query);
 
 compare_errors:
 
-     /*
+    /*
+      In the slave thread, we may sometimes execute some DROP / * 40005
+      TEMPORARY * / TABLE that come from parts of binlogs (likely if we
+      use RESET SLAVE or CHANGE MASTER TO), while the temporary table
+      has already been dropped. To ignore such irrelevant "table does
+      not exist errors", we silently clear the error if TEMPORARY was used.
+    */
+    if (thd->lex->drop_temporary &&
+        thd->net.last_errno == ER_BAD_TABLE_ERROR && !expected_error)
+      thd->clear_error();
+    /*
       If we expected a non-zero error code, and we don't get the same error
       code, and none of them should be ignored.
     */
